# end2end-mlops-agents

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yaml
frontend/: dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
helm/: values.yaml
helm/charts/api/: values.yaml
helm/charts/api/templates/: config.yaml  deployment.yaml  service.yaml
helm/charts/frontend/: values.yaml
helm/charts/frontend/templates/: deployment.yaml
helm/charts/ollama/: values.yaml
helm/charts/ollama/templates/: deployment.yaml
helm/templates/: ingress.yaml
ollama/: dockerfile  pull.sh
src/: api.py
src/fitness/: crew.py  prompt.py
src/fitness/config/: agents.yaml  tasks.yaml
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
